<resources>
    <string name="app_name">Crud Usuarios</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="segundo_apellido">Segundo apellido</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="ups_hubo_un_error_al_enviar_el_registro_nintenta_nuevamente_mas_tarde">Ups! hubo un error al enviar el registro\npor favor intenta nuevamente más tarde.</string>
    <string name="operacion_ejecutada_correctamente">Operación ejecutada correctamente.</string>
    <string name="ups_verifica_nuevamente_el_procedimiento">Ups! verifica nuevamente el procedimiento.</string>
    <string name="ups_no_se_actualizo_el_usuario_intenta_nuevamente">Ups! no se actualizó el usuario, intenta nuevamente</string>
    <string name="registro_actualizado">Registro actualizado!</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="editar_datos_personales">Editar datos personales</string>
    <string name="g_nero">Género</string>
    <string name="ups_no_se_cre_el_usuario_intenta_nuevamente">Ups! no se creó el usuario, intenta nuevamente</string>
    <string name="usuario_creado">Usuario creado!</string>
    <string name="eliminaci_n_exitosa">Eliminación exitosa!</string>
    <string name="usuario_no_encontrado">Usuario no encontrado.</string>
</resources>